Phase 1 Consolidation and Phase 2 Optimization: Consolidated project structure by removing redundant project/ directory and moving files to root. Optimized with offline support, geolocation, notifications, social sharing, and improved lesson data extraction. Added new UI components and hooks for enhanced functionality.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     <div id="root"></div>
     <!-- Point d'entrée de l'application -->
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Enregistrement du Service Worker -->
+    <script src="/sw-register.js"></script>
     <!-- Script pour forcer le rechargement en cas de problème de cache -->
     <script>
       // Force le rechargement en cas d'erreur de chargement
