--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       script-src 'self' 'unsafe-inline' http://localhost:3001;
       style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://rsms.me;
       font-src 'self' https://fonts.gstatic.com https://rsms.me https://r2cdn.perplexity.ai;
-      connect-src 'self' http://localhost:3001 http://localhost:5746 http://localhost:5747 http://localhost:5748 https://generativelanguage.googleapis.com https://texttospeech.googleapis.com;
+      connect-src 'self' http://localhost:3001 http://localhost:5746 http://localhost:5747 http://localhost:5748 https://generativelanguage.googleapis.com https://texttospeech.googleapis.com https://data.jw-api.org https://wol.jw.org;
     ">
   </head>
   <body>
