Fix Learning Paths 404, enrich content, and fix navigation title

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
     <meta name="twitter:image" content="/twitter-image.png" />
     
     <!-- Theme Color -->
-    <meta name="theme-color" content="#1A73E8" media="(prefers-color-scheme: light)" />
-    <meta name="theme-color" content="#1e293b" media="(prefers-color-scheme: dark)" />
+    <meta name="theme-color" content="#1A73E8" />
     
     <!-- Préchargement des polices et autres ressources critiques -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
